--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
                         <h4>Evite el exceso</h4>
                     </a></div>
                 <div class="col-lg-4 col-md-6 footer-newsletter text-center"> <a
-                    [routerLink]="['/aviso-de-privacidad']" routerLinkActive="router-link-active" target="_blank">
+                    [href]="['/aviso-de-privacidad']" routerLinkActive="router-link-active" target="_blank">
                         <h4>Aviso de privacidad</h4>
                     </a></div>
                 <div class="col-lg-4 col-md-6 footer-newsletter text-center"> <a
