--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,11 +7,11 @@
                         <h4>Evite el exceso</h4>
                     </a></div>
                 <div class="col-lg-4 col-md-6 footer-newsletter text-center"> <a
-                    [href]="['/aviso-de-privacidad']" routerLinkActive="router-link-active" target="_blank">
+                    [routerLink]="['/aviso-de-privacidad']" routerLinkActive="router-link-active">
                         <h4>Aviso de privacidad</h4>
                     </a></div>
                 <div class="col-lg-4 col-md-6 footer-newsletter text-center"> <a
-                        [routerLink]="['/terminos-y-condiciones']" routerLinkActive="router-link-active"  target="_blank">
+                        [routerLink]="['/terminos-y-condiciones']" routerLinkActive="router-link-active" >
                         <h4>Términos y condiciones</h4>
                     </a></div>
             </div>
